--- a/src/client/front/index.html
+++ b/src/client/front/index.html
@@ -1,5 +1,9 @@
 
-<html><body>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8">
+</head>
+<body>
   <script type="text/javascript">
     username = "Unknown"
 
