unable to load picture in mian GUI

--- a/src/client/front/index.html
+++ b/src/client/front/index.html
@@ -84,7 +84,7 @@
       height: 128px;
       width: 128px;
       margin: auto;
-      background-image: url("../../../pic/floater.png");
+      background-image: url("floater.png");
 
     }
     .wrap {
