update front end

--- a/src/client/front/index.html
+++ b/src/client/front/index.html
@@ -1,150 +1,1 @@
-
-<html>
-<head>
-  <meta http-equiv="content-type" content="text/html;charset=utf-8">
-</head>
-<body>
-  <script type="text/javascript">
-    username = "Unknown"
-    function searching() {
-      regist=document.getElementById("regist");
-      main=document.getElementById("chatroom");
-      regist.style.display = "none";
-      main.style.display = "inline";
-    }
-    // function put(message) {
-    //   wrap = document.getElementsByClassName('wrap');
-    //   p = document.createElement("p");
-    //   p.innerHTML = message;
-    //   wrap[0].appendChild(p);
-    //   document.getElementById('message').value = ""
-    // }
-    //
-    // function send() {
-    //   message_send = document.getElementById('message').value;
-    //   message = username + ": " + message_send
-    //   put(message);
-    //   pyObj.send(message_send);
-    // }
-    //
-    // function getMessage() {
-    //   message = pyObj.receiveMsg;
-    //
-    //   if(message != "") {
-    //     put(message);
-    //   }
-    //
-    // }
-
-    window.onload = function() {
-      // username = pyObj.username;
-      // var int=self.setInterval("getMessage()", 500);
-      floater = document.getElementsByClassName("searchbox");
-      floater[0].onclick = function(){searching()};
-    }
-  </script>
-
-  <style media="screen">
-    html {
-     height: 100%;
-    }
-    body {
-      padding-top: 5%;
-      background-color: rgb(66,150,255);
-       height: 90%;
-    }
-    input {
-      border-radius: 10px;
-      height: 25pt;
-      font-size: 20pt;
-      padding-left: 5px;
-    }
-    #regist {
-      display: inline;
-    }
-    #chatroom {
-      display: none;
-    }
-    .registbox{
-      width: 95%;
-      height: 30%;
-      text-align: center;
-    }
-    .namebox input {
-      width: 40%;
-    }
-    .namebox {
-      padding-top: 150px;
-      padding-bottom: 150px;
-      height: 50px;
-      width: 100%;
-    }
-    .searchbox{
-      border-radius: 50%;
-      height: 128px;
-      width: 128px;
-      margin: auto;
-      background-image: url("front/floater.png");
-
-    }
-    .wrap {
-      width: 80%;
-      min-width: 100px;
-      height: 70%;
-      background-color: white;
-      border: 5px;
-      border-radius: 10px;
-      opacity: 0.7;
-      margin: 0 auto;
-      margin-bottom: 5%;
-      overflow-y: scroll;
-      font-family: Arial;
-      font-weight: bold;
-      font-size: 15pt;
-      color: black;
-      padding: 20px;
-    }
-    .inputbox {
-      width: 90%;
-      height: 5%;
-      margin: 0 auto;
-      text-align: center;
-    }
-    .messagebox {
-      width: 100%;
-      margin-left: 10px;
-    }
-    .messagebox input {
-      float: left;
-      width: 70%;
-    }
-    .sendbox button {
-      background-color: rgb(121, 204, 223);
-      border-radius: 10px;
-      height: 25pt;
-      width: 20%;
-      float: right;
-    }
-  </style>
-  <div id="regist">
-    <div class="registbox">
-      <div class="namebox">
-        <input type="text" name="myname" id="myname" value="">
-      </div>
-      <div class="searchbox">
-      </div>
-    </div>
-  </div>
-  <div id="chatroom">
-    <div class="wrap">
-    </div>
-    <div class="inputbox">
-      <div class="messagebox">
-        <input type="text" name="message" id="message" value="">
-      </div>
-      <div class="sendbox">
-        <button type="button" name="send" id="send" onclick="send()">send</button>
-      </div>
-    </div>
-  </div>
-</body></html>
+<html><head><meta http-equiv="content-type" content="text/html;charset=utf-8"/><script src="js/jquery.min.js" charset="utf-8"></script><script src="js/main.js" charset="utf-8"></script><script src="js/login.js" charset="utf-8"></script><script src="js/jquery.shCircleLoader-min.js" charset="utf-8"></script><script src="js/bootstrap.min.js" charset="utf-8"></script><link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8"/><link rel="stylesheet" href="css/my.css" media="screen" title="no title" charset="utf-8"/></head><body><div id="login_container" class="container"><div class="regist"><div class="title"><h1>FLOATER v1.0</h1></div><div class="registbox"><div class="searchbox"></div><div class="namebox input-group"><input id="myname" placeholder="Please input a username" type="text" name="myname" value="" class="form-control"/><span class="input-group-btn"><button id="loginButton" type="button" class="btn btn-default">Login</button></span></div><div id="shclCcw" style="width: 80px; height: 80px; margin: auto"></div><div class="hint"><h4>Searching your friend...</h4></div></div></div></div><div id="chartroom_container" style="display:none" class="container"><div class="chatroom"><div class="head"><div class="searchbox"></div><div class="title"><h2>Bob: Chating with Alice</h2></div></div><div id="wrap" class="wrap panel panel-default"><div class="panel-body"><div class="message_left"><div class="from"> <span id="username" class="username">Alice </span>says:</div><div class="content"><span> hellodddd</span></div></div><div class="clear"></div><div class="message_right"><div class="from"><span class="username">Bob </span>says:</div><div class="content"><span> hhhhhhhhhh</span></div></div></div></div><div class="inputbox"><div class="input"><textarea id="message" type="text" placeholder="Message" class="form-control"></textarea></div><div class="button"><button id="send" type="button" class="btn btn-default btn-lg">Send</button></div></div></div></div><div class="container copyright"><p>computer-network copyright 2015, all right reserved.</p></div></body></html>
