--- a/src/client/front/index.html
+++ b/src/client/front/index.html
@@ -6,6 +6,7 @@
     <script src="js/login.js" charset="utf-8"></script>
     <script src="js/jquery.shCircleLoader-min.js" charset="utf-8"></script>
     <script src="js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="js/extend.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8"/>
     <link rel="stylesheet" href="css/my.css" media="screen" title="no title" charset="utf-8"/>
   </head>
@@ -29,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div id="chartroom_container" style="display:none" class="container">
+    <div id="chartroom_container"  style="display:none"  class="container">
       <div class="chatroom">
         <div class="head">
           <div class="searchbox">
@@ -47,14 +48,23 @@
             <textarea id="message" type="text" placeholder="Message" class="form-control">
             </textarea>
           </div>
-          <div class="button">
+          <div class="button" style="display:none" id="messageButton">
             <button id="send" type="button" class="btn btn-default btn-lg">Send</button>
+          </div>
+          <div class="extendButton" id="extendButton">
+            <span>+</span>
           </div>
         </div>
       </div>
+
+
+      <div id="myModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+            <img id="big-image" src="" alt="" />
+      </div>
+
     </div>
     <div class="container copyright">
-      <p>computer-network copyright 2015, all right reserved.</p>
+      <p>Floater (c) 2015 Copyright computer-network All Rights Reserved.</p>
     </div>
   </body>
 </html>
